update responsive style

--- a/src/index.html
+++ b/src/index.html
@@ -28,14 +28,21 @@
             websites, enhancing your brand, and creating impactful solutions to
             elevate your business.
           </p>
-          <a href="#" class="btn btn_primary">Get In Touch</a>
+          <a href="#" class="btn btn_primary hero__btn">
+            <span>Let’s Discuss Your Project</span>
+            <span class="btn__icon btn__icon-arrow"></span>
+          </a>
+        </div>
+        <div class="section__circle">
+          <img src="./assets/img/stamp%20btn.svg" alt="icon" />
         </div>
       </div>
     </section>
+
     <section class="principles section">
       <div class="container">
         <div class="principles__content">
-          <h2 class="section__title">Our guiding principles</h2>
+          <h2 class="section__title">Our <mark>guiding</mark> principles</h2>
           <ul class="principles__list">
             <li class="principles__item">
               <img src="./assets/img/principles/icon-1.svg" alt="icon" />
@@ -338,19 +345,12 @@
     </section>
 
     <div class="wrapper">
-      <main class="main">
-        <div class="container"></div>
-      </main>
-      <footer class="footer">
-        <div class="container"></div>
-      </footer>
       <div class="mobile-menu" id="mobMenu">
         <div class="nav">
           <ul class="nav__list">
             <li class="nav__item">
               <a href="#" class="nav__link">Home</a>
             </li>
-
             <li class="nav__item">
               <a href="#" class="nav__link">Portfolio</a>
             </li>
