update responsive style

--- a/src/pages/portfolio.html
+++ b/src/pages/portfolio.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="../styles/main.scss" />
   </head>
   <body>
-    <zz src="../components/header.html" />
+    <load src="../components/header.html" highlight-portfolio="is-active" />
+    <main></main>
 
     <load src="../components/footer.html" />
 
