update responsive style

--- a/src/index.html
+++ b/src/index.html
@@ -103,7 +103,7 @@
               </h2>
               <div class="accordion">
                 <div class="accordion__item">
-                  <button class="accordion__header" aria-expanded="true">
+                  <button class="accordion__header" aria-expanded="false">
                     <span class="accordion__number h5">01.</span>
                     <span class="accordion__title h5">Redesign Services</span>
                     <span class="accordion__icon"
