fixed responsive styles

--- a/src/index.html
+++ b/src/index.html
@@ -24,10 +24,9 @@
               Transforming <span class="text-color">Ideas</span> into reality
             </h1>
             <p class="hero__description p-1">
-              Welcome to a place where creativity meets innovation—Mary Fisher
-              Design Agency. Our expert team is dedicated to crafting compelling
-              websites, enhancing your brand, and creating impactful solutions
-              to elevate your business.
+              Welcome to a place where creativity meets innovation. Our expert
+              team is dedicated to crafting compelling websites, enhancing your
+              brand, and creating impactful solutions to elevate your business.
             </p>
             <a href="#" class="btn btn_primary hero__btn">
               <span class="btn__text">Let’s Discuss Your Project</span>
