--- a/src/index.html
+++ b/src/index.html
@@ -709,80 +709,172 @@
                   </div>
                 </div>
                 <div class="team__item swiper-slide">
-                  <div class="team__item-img">
-                    <img src="./assets/img/team/team-1.png" alt="Morris" />
+                  <div class="team__item-wrapper">
+                    <div class="team__banner">
+                      <h2 class="team__title">
+                        Our team of <span class="text-color">experts</span>
+                      </h2>
+                      <p>Discover how to enhance your product</p>
+                      <a href="#" class="btn btn_primary">
+                        <span class="btn__text">Request Consultation</span>
+                        <span class="btn__icon btn__icon-arrow"></span>
+                      </a>
+                    </div>
+                    <div class="team__info">
+                      <div class="team__info-text">
+                        <ul>
+                          <li><h4>Morris S.</h4></li>
+                          <li>
+                            <span class="p-2">Senior UX/UI designer </span>
+                          </li>
+                        </ul>
+                        <ul class="team__item-skills">
+                          <li>
+                            <img src="./assets/icons/star.svg" alt="" />
+                            <h5>5 years of experience</h5>
+                          </li>
+                          <li>
+                            <img src="./assets/icons/tick-circle.svg" alt="" />
+                            <h5>20+ projects delivered</h5>
+                          </li>
+                          <li>
+                            <img src="./assets/icons/coffee.svg" alt="" />
+                            <h5>123 cups of coffee</h5>
+                          </li>
+                        </ul>
+                      </div>
+
+                      <div class="team__item-img">
+                        <img src="./assets/img/team/team-1.png" alt="Morris" />
+                      </div>
+                    </div>
                   </div>
-                  <ul class="team__item-skills">
-                    <li>
-                      <img src="./assets/icons/star.svg" alt="" />
-                      <h5>5 years of experience</h5>
-                    </li>
-                    <li>
-                      <img src="./assets/icons/tick-circle.svg" alt="" />
-                      <h5>20+ projects delivered</h5>
-                    </li>
-                    <li>
-                      <img src="./assets/icons/coffee.svg" alt="" />
-                      <h5>123 cups of coffee</h5>
-                    </li>
-                  </ul>
                 </div>
                 <div class="team__item swiper-slide">
-                  <div class="team__item-img">
-                    <img src="./assets/img/team/team-1.png" alt="Morris" />
+                  <div class="team__item-wrapper">
+                    <div class="team__banner">
+                      <h2 class="team__title">
+                        Our team of <span class="text-color">experts</span>
+                      </h2>
+                      <p>Discover how to enhance your product</p>
+                      <a href="#" class="btn btn_primary">
+                        <span class="btn__text">Request Consultation</span>
+                        <span class="btn__icon btn__icon-arrow"></span>
+                      </a>
+                    </div>
+                    <div class="team__info">
+                      <div class="team__info-text">
+                        <ul>
+                          <li><h4>Morris S.</h4></li>
+                          <li>
+                            <span class="p-2">Senior UX/UI designer </span>
+                          </li>
+                        </ul>
+                        <ul class="team__item-skills">
+                          <li>
+                            <img src="./assets/icons/star.svg" alt="" />
+                            <h5>5 years of experience</h5>
+                          </li>
+                          <li>
+                            <img src="./assets/icons/tick-circle.svg" alt="" />
+                            <h5>20+ projects delivered</h5>
+                          </li>
+                          <li>
+                            <img src="./assets/icons/coffee.svg" alt="" />
+                            <h5>123 cups of coffee</h5>
+                          </li>
+                        </ul>
+                      </div>
+
+                      <div class="team__item-img">
+                        <img src="./assets/img/team/team-1.png" alt="Morris" />
+                      </div>
+                    </div>
                   </div>
-                  <ul class="team__item-skills">
-                    <li>
-                      <img src="./assets/icons/star.svg" alt="" />
-                      <h5>5 years of experience</h5>
-                    </li>
-                    <li>
-                      <img src="./assets/icons/tick-circle.svg" alt="" />
-                      <h5>20+ projects delivered</h5>
-                    </li>
-                    <li>
-                      <img src="./assets/icons/coffee.svg" alt="" />
-                      <h5>123 cups of coffee</h5>
-                    </li>
-                  </ul>
                 </div>
                 <div class="team__item swiper-slide">
-                  <div class="team__item-img">
-                    <img src="./assets/img/team/team-1.png" alt="Morris" />
+                  <div class="team__item-wrapper">
+                    <div class="team__banner">
+                      <h2 class="team__title">
+                        Our team of <span class="text-color">experts</span>
+                      </h2>
+                      <p>Discover how to enhance your product</p>
+                      <a href="#" class="btn btn_primary">
+                        <span class="btn__text">Request Consultation</span>
+                        <span class="btn__icon btn__icon-arrow"></span>
+                      </a>
+                    </div>
+                    <div class="team__info">
+                      <div class="team__info-text">
+                        <ul>
+                          <li><h4>Morris S.</h4></li>
+                          <li>
+                            <span class="p-2">Senior UX/UI designer </span>
+                          </li>
+                        </ul>
+                        <ul class="team__item-skills">
+                          <li>
+                            <img src="./assets/icons/star.svg" alt="" />
+                            <h5>5 years of experience</h5>
+                          </li>
+                          <li>
+                            <img src="./assets/icons/tick-circle.svg" alt="" />
+                            <h5>20+ projects delivered</h5>
+                          </li>
+                          <li>
+                            <img src="./assets/icons/coffee.svg" alt="" />
+                            <h5>123 cups of coffee</h5>
+                          </li>
+                        </ul>
+                      </div>
+
+                      <div class="team__item-img">
+                        <img src="./assets/img/team/team-1.png" alt="Morris" />
+                      </div>
+                    </div>
                   </div>
-                  <ul class="team__item-skills">
-                    <li>
-                      <img src="./assets/icons/star.svg" alt="" />
-                      <h5>5 years of experience</h5>
-                    </li>
-                    <li>
-                      <img src="./assets/icons/tick-circle.svg" alt="" />
-                      <h5>20+ projects delivered</h5>
-                    </li>
-                    <li>
-                      <img src="./assets/icons/coffee.svg" alt="" />
-                      <h5>123 cups of coffee</h5>
-                    </li>
-                  </ul>
                 </div>
                 <div class="team__item swiper-slide">
-                  <div class="team__item-img">
-                    <img src="./assets/img/team/team-1.png" alt="Morris" />
+                  <div class="team__item-wrapper">
+                    <div class="team__banner">
+                      <h2 class="team__title">
+                        Our team of <span class="text-color">experts</span>
+                      </h2>
+                      <p>Discover how to enhance your product</p>
+                      <a href="#" class="btn btn_primary">
+                        <span class="btn__text">Request Consultation</span>
+                        <span class="btn__icon btn__icon-arrow"></span>
+                      </a>
+                    </div>
+                    <div class="team__info">
+                      <div class="team__info-text">
+                        <ul>
+                          <li><h4>Morris S.</h4></li>
+                          <li>
+                            <span class="p-2">Senior UX/UI designer </span>
+                          </li>
+                        </ul>
+                        <ul class="team__item-skills">
+                          <li>
+                            <img src="./assets/icons/star.svg" alt="" />
+                            <h5>5 years of experience</h5>
+                          </li>
+                          <li>
+                            <img src="./assets/icons/tick-circle.svg" alt="" />
+                            <h5>20+ projects delivered</h5>
+                          </li>
+                          <li>
+                            <img src="./assets/icons/coffee.svg" alt="" />
+                            <h5>123 cups of coffee</h5>
+                          </li>
+                        </ul>
+                      </div>
+
+                      <div class="team__item-img">
+                        <img src="./assets/img/team/team-1.png" alt="Morris" />
+                      </div>
+                    </div>
                   </div>
-                  <ul class="team__item-skills">
-                    <li>
-                      <img src="./assets/icons/star.svg" alt="" />
-                      <h5>5 years of experience</h5>
-                    </li>
-                    <li>
-                      <img src="./assets/icons/tick-circle.svg" alt="" />
-                      <h5>20+ projects delivered</h5>
-                    </li>
-                    <li>
-                      <img src="./assets/icons/coffee.svg" alt="" />
-                      <h5>123 cups of coffee</h5>
-                    </li>
-                  </ul>
                 </div>
               </div>
               <div class="swiper-pagination"></div>
