--- a/src/index.html
+++ b/src/index.html
@@ -28,9 +28,7 @@
             <a href="#" class="btn btn_primary hero__btn">
               <span class="btn__text">Let’s Discuss Your Project</span>
               <span class="btn__icon btn__icon-arrow">
-                <svg class="icon icon-arrow-right">
-                  <use xlink:href="#icon-arrow-right"></use>
-                </svg>
+                <span class="icon-arrow-right"></span>
               </span>
             </a>
           </div>
