--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,17 @@
     />
     <link rel="stylesheet" href="../src/styles/main.scss" />
     <link rel="stylesheet" href="../src/styles/pages/index.scss" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VRYDG5C980"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-VRYDG5C980");
+    </script>
   </head>
   <body>
     <load src="../src/components/header.html" highlight-home="is-active" />
