--- a/src/index.html
+++ b/src/index.html
@@ -522,6 +522,7 @@
       <section class="team">
         <div class="container">
           <div class="team__content">
+            <h2 class="team__title team__title-mob">Our team of <span class="text-color">experts</span></h2>
             <div class="team__list swiper">
               <div class="swiper-wrapper">
                 <div class="team__item swiper-slide">
@@ -544,25 +545,25 @@
                             <span class="p-2">Senior UX/UI designer </span>
                           </li>
                         </ul>
-                        <ul class="team__item-skills">
-                          <li>
-                            <img src="./assets/icons/star.svg" alt="" />
-                            <h5>5 years of experience</h5>
-                          </li>
-                          <li>
-                            <img src="./assets/icons/tick-circle.svg" alt="" />
-                            <h5>20+ projects delivered</h5>
-                          </li>
-                          <li>
-                            <img src="./assets/icons/coffee.svg" alt="" />
-                            <h5>123 cups of coffee</h5>
-                          </li>
-                        </ul>
                       </div>
 
                       <div class="team__item-img">
                         <img src="./assets/img/team/team-1.png" alt="Morris" />
                       </div>
+                      <ul class="team__item-skills">
+                        <li>
+                          <img src="./assets/icons/star.svg" alt="" />
+                          <h5>5 years of experience</h5>
+                        </li>
+                        <li>
+                          <img src="./assets/icons/tick-circle.svg" alt="" />
+                          <h5>20+ projects delivered</h5>
+                        </li>
+                        <li>
+                          <img src="./assets/icons/coffee.svg" alt="" />
+                          <h5>123 cups of coffee</h5>
+                        </li>
+                      </ul>
                     </div>
                   </div>
                 </div>
@@ -573,7 +574,9 @@
                       <p>Discover how to enhance your product</p>
                       <a href="#" class="btn btn_primary">
                         <span class="btn__text">Request Consultation</span>
-                        <span class="btn__icon btn__icon-arrow"></span>
+                        <span class="btn__icon btn__icon-arrow">
+                          <span class="icon-arrow-right"></span>
+                        </span>
                       </a>
                     </div>
                     <div class="team__info">
@@ -584,25 +587,25 @@
                             <span class="p-2">Senior UX/UI designer </span>
                           </li>
                         </ul>
-                        <ul class="team__item-skills">
-                          <li>
-                            <img src="./assets/icons/star.svg" alt="" />
-                            <h5>5 years of experience</h5>
-                          </li>
-                          <li>
-                            <img src="./assets/icons/tick-circle.svg" alt="" />
-                            <h5>20+ projects delivered</h5>
-                          </li>
-                          <li>
-                            <img src="./assets/icons/coffee.svg" alt="" />
-                            <h5>123 cups of coffee</h5>
-                          </li>
-                        </ul>
                       </div>
 
                       <div class="team__item-img">
                         <img src="./assets/img/team/team-1.png" alt="Morris" />
                       </div>
+                      <ul class="team__item-skills">
+                        <li>
+                          <img src="./assets/icons/star.svg" alt="" />
+                          <h5>5 years of experience</h5>
+                        </li>
+                        <li>
+                          <img src="./assets/icons/tick-circle.svg" alt="" />
+                          <h5>20+ projects delivered</h5>
+                        </li>
+                        <li>
+                          <img src="./assets/icons/coffee.svg" alt="" />
+                          <h5>123 cups of coffee</h5>
+                        </li>
+                      </ul>
                     </div>
                   </div>
                 </div>
@@ -613,7 +616,9 @@
                       <p>Discover how to enhance your product</p>
                       <a href="#" class="btn btn_primary">
                         <span class="btn__text">Request Consultation</span>
-                        <span class="btn__icon btn__icon-arrow"></span>
+                        <span class="btn__icon btn__icon-arrow">
+                          <span class="icon-arrow-right"></span>
+                        </span>
                       </a>
                     </div>
                     <div class="team__info">
@@ -624,25 +629,25 @@
                             <span class="p-2">Senior UX/UI designer </span>
                           </li>
                         </ul>
-                        <ul class="team__item-skills">
-                          <li>
-                            <img src="./assets/icons/star.svg" alt="" />
-                            <h5>5 years of experience</h5>
-                          </li>
-                          <li>
-                            <img src="./assets/icons/tick-circle.svg" alt="" />
-                            <h5>20+ projects delivered</h5>
-                          </li>
-                          <li>
-                            <img src="./assets/icons/coffee.svg" alt="" />
-                            <h5>123 cups of coffee</h5>
-                          </li>
-                        </ul>
                       </div>
 
                       <div class="team__item-img">
-                        <img src="./assets/img/team/team-1.png" alt="Morris" />
+                        <img src="./assets/img/team/team-1-2.png" alt="Morris" />
                       </div>
+                      <ul class="team__item-skills">
+                        <li>
+                          <img src="./assets/icons/star.svg" alt="" />
+                          <h5>5 years of experience</h5>
+                        </li>
+                        <li>
+                          <img src="./assets/icons/tick-circle.svg" alt="" />
+                          <h5>20+ projects delivered</h5>
+                        </li>
+                        <li>
+                          <img src="./assets/icons/coffee.svg" alt="" />
+                          <h5>123 cups of coffee</h5>
+                        </li>
+                      </ul>
                     </div>
                   </div>
                 </div>
@@ -653,7 +658,9 @@
                       <p>Discover how to enhance your product</p>
                       <a href="#" class="btn btn_primary">
                         <span class="btn__text">Request Consultation</span>
-                        <span class="btn__icon btn__icon-arrow"></span>
+                        <span class="btn__icon btn__icon-arrow">
+                          <span class="icon-arrow-right"></span>
+                        </span>
                       </a>
                     </div>
                     <div class="team__info">
@@ -664,25 +671,25 @@
                             <span class="p-2">Senior UX/UI designer </span>
                           </li>
                         </ul>
-                        <ul class="team__item-skills">
-                          <li>
-                            <img src="./assets/icons/star.svg" alt="" />
-                            <h5>5 years of experience</h5>
-                          </li>
-                          <li>
-                            <img src="./assets/icons/tick-circle.svg" alt="" />
-                            <h5>20+ projects delivered</h5>
-                          </li>
-                          <li>
-                            <img src="./assets/icons/coffee.svg" alt="" />
-                            <h5>123 cups of coffee</h5>
-                          </li>
-                        </ul>
                       </div>
 
                       <div class="team__item-img">
                         <img src="./assets/img/team/team-1.png" alt="Morris" />
                       </div>
+                      <ul class="team__item-skills">
+                        <li>
+                          <img src="./assets/icons/star.svg" alt="" />
+                          <h5>5 years of experience</h5>
+                        </li>
+                        <li>
+                          <img src="./assets/icons/tick-circle.svg" alt="" />
+                          <h5>20+ projects delivered</h5>
+                        </li>
+                        <li>
+                          <img src="./assets/icons/coffee.svg" alt="" />
+                          <h5>123 cups of coffee</h5>
+                        </li>
+                      </ul>
                     </div>
                   </div>
                 </div>
@@ -693,7 +700,9 @@
                       <p>Discover how to enhance your product</p>
                       <a href="#" class="btn btn_primary">
                         <span class="btn__text">Request Consultation</span>
-                        <span class="btn__icon btn__icon-arrow"></span>
+                        <span class="btn__icon btn__icon-arrow">
+                          <span class="icon-arrow-right"></span>
+                        </span>
                       </a>
                     </div>
                     <div class="team__info">
@@ -704,25 +713,25 @@
                             <span class="p-2">Senior UX/UI designer </span>
                           </li>
                         </ul>
-                        <ul class="team__item-skills">
-                          <li>
-                            <img src="./assets/icons/star.svg" alt="" />
-                            <h5>5 years of experience</h5>
-                          </li>
-                          <li>
-                            <img src="./assets/icons/tick-circle.svg" alt="" />
-                            <h5>20+ projects delivered</h5>
-                          </li>
-                          <li>
-                            <img src="./assets/icons/coffee.svg" alt="" />
-                            <h5>123 cups of coffee</h5>
-                          </li>
-                        </ul>
                       </div>
 
                       <div class="team__item-img">
                         <img src="./assets/img/team/team-1.png" alt="Morris" />
                       </div>
+                      <ul class="team__item-skills">
+                        <li>
+                          <img src="./assets/icons/star.svg" alt="" />
+                          <h5>5 years of experience</h5>
+                        </li>
+                        <li>
+                          <img src="./assets/icons/tick-circle.svg" alt="" />
+                          <h5>20+ projects delivered</h5>
+                        </li>
+                        <li>
+                          <img src="./assets/icons/coffee.svg" alt="" />
+                          <h5>123 cups of coffee</h5>
+                        </li>
+                      </ul>
                     </div>
                   </div>
                 </div>
@@ -731,6 +740,12 @@
               <div class="swiper-button-next"></div>
               <div class="swiper-button-prev"></div>
             </div>
+            <a href="#" class="btn btn_primary team__btn">
+              <span class="btn__text">Request Consultation</span>
+              <span class="btn__icon btn__icon-arrow">
+                <span class="icon-arrow-right"></span>
+              </span>
+            </a>
           </div>
         </div>
       </section>
