--- a/src/index.html
+++ b/src/index.html
@@ -632,7 +632,7 @@
                       </div>
 
                       <div class="team__item-img">
-                        <img src="./assets/img/team/team-1-2.png" alt="Morris" />
+                        <img src="./assets/img/team/team-1.png" alt="Morris" />
                       </div>
                       <ul class="team__item-skills">
                         <li>
@@ -737,8 +737,14 @@
                 </div>
               </div>
               <div class="swiper-pagination"></div>
-              <div class="swiper-button-next"></div>
-              <div class="swiper-button-prev"></div>
+              <div class="swiper__nav">
+                <div class="swiper__button-prev">
+                  <span class="icon-arrow-right"></span>
+                </div>
+                <div class="swiper__button-next">
+                  <span class="icon-arrow-right"></span>
+                </div>
+              </div>
             </div>
             <a href="#" class="btn btn_primary team__btn">
               <span class="btn__text">Request Consultation</span>
