--- a/src/index.html
+++ b/src/index.html
@@ -529,7 +529,7 @@
                   <div class="team__item-wrapper">
                     <div class="team__banner">
                       <h2 class="team__title">Our team of <span class="text-color">experts</span></h2>
-                      <p>Discover how to enhance your product</p>
+                      <p class="p-1">Discover how to enhance your product</p>
                       <a href="#" class="btn btn_primary">
                         <span class="btn__text">Request Consultation</span>
                         <span class="btn__icon btn__icon-arrow">
@@ -571,7 +571,7 @@
                   <div class="team__item-wrapper">
                     <div class="team__banner">
                       <h2 class="team__title">Our team of <span class="text-color">experts</span></h2>
-                      <p>Discover how to enhance your product</p>
+                      <p class="p-1">Discover how to enhance your product</p>
                       <a href="#" class="btn btn_primary">
                         <span class="btn__text">Request Consultation</span>
                         <span class="btn__icon btn__icon-arrow">
@@ -613,7 +613,7 @@
                   <div class="team__item-wrapper">
                     <div class="team__banner">
                       <h2 class="team__title">Our team of <span class="text-color">experts</span></h2>
-                      <p>Discover how to enhance your product</p>
+                      <p class="p-1">Discover how to enhance your product</p>
                       <a href="#" class="btn btn_primary">
                         <span class="btn__text">Request Consultation</span>
                         <span class="btn__icon btn__icon-arrow">
@@ -655,7 +655,7 @@
                   <div class="team__item-wrapper">
                     <div class="team__banner">
                       <h2 class="team__title">Our team of <span class="text-color">experts</span></h2>
-                      <p>Discover how to enhance your product</p>
+                      <p class="p-1">Discover how to enhance your product</p>
                       <a href="#" class="btn btn_primary">
                         <span class="btn__text">Request Consultation</span>
                         <span class="btn__icon btn__icon-arrow">
@@ -697,7 +697,7 @@
                   <div class="team__item-wrapper">
                     <div class="team__banner">
                       <h2 class="team__title">Our team of <span class="text-color">experts</span></h2>
-                      <p>Discover how to enhance your product</p>
+                      <p class="p-1">Discover how to enhance your product</p>
                       <a href="#" class="btn btn_primary">
                         <span class="btn__text">Request Consultation</span>
                         <span class="btn__icon btn__icon-arrow">
