--- a/src/index.html
+++ b/src/index.html
@@ -400,7 +400,7 @@
                         </ul>
                         <div class="accordion__footer">
                           <ul class="accordion__price">
-                            <li class="accordion__price-label">Per Hour/li></li>
+                            <li class="accordion__price-label">Per Hour</li>
                             <li class="accordion__price-value">
                               <h5>$20</h5>
                             </li>
