--- a/src/index.html
+++ b/src/index.html
@@ -761,7 +761,7 @@
     <load src="../src/components/cta.html" />
 
     <load src="../src/components/footer.html" />
-
+    <script type="module" src="js/scripts.js"></script>
     <script type="module" src="js/main.js"></script>
   </body>
 </html>
