add contacts page

--- a/src/services.html
+++ b/src/services.html
@@ -11,11 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,400..700&family=Unbounded:wght@400..700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../styles/main.scss" />
-    <link rel="stylesheet" href="../styles/pages/services.scss" />
+    <link rel="stylesheet" href="styles/main.scss" />
+    <link rel="stylesheet" href="styles/pages/services.scss" />
   </head>
   <body>
-    <load src="../components/header.html" highlight-services="is-active" />
+    <load src="./components/header.html" highlight-services="is-active" />
     <main>
       <section class="hero">
         <div class="container hero__wrapper">
@@ -47,6 +47,6 @@
     <load src="../components/cta.html" />
     <load src="../components/footer.html" />
 
-    <script type="module" src="../js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
   </body>
 </html>
