--- a/src/about.html
+++ b/src/about.html
@@ -11,14 +11,14 @@
       href="https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,400..700&family=Unbounded:wght@400..700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../styles/main.scss" />
+    <link rel="stylesheet" href="styles/main.scss" />
   </head>
   <body>
-    <load src="../components/header.html" highlight-about="is-active" />
+    <load src="./components/header.html" highlight-about="is-active" />
     <main></main>
 
-    <load src="../components/footer.html" />
+    <load src="./components/footer.html" />
 
-    <script type="module" src="../js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
   </body>
 </html>
