add contacts page

--- a/src/index.html
+++ b/src/index.html
@@ -756,11 +756,11 @@
         </div>
       </section>
     </main>
-    <load src="../src/components/testimonials.html" />
+    <load src="./components/testimonials.html" />
 
-    <load src="../src/components/cta.html" />
+    <load src="./components/cta.html" />
 
-    <load src="../src/components/footer.html" />
+    <load src="./components/footer.html" />
     <script type="module" src="js/scripts.js"></script>
     <script type="module" src="js/main.js"></script>
   </body>
