add contacts page

--- a/src/services.html
+++ b/src/services.html
@@ -42,10 +42,11 @@
           </div>
         </div>
       </section>
+      фц
     </main>
 
-    <load src="../components/cta.html" />
-    <load src="../components/footer.html" />
+    <load src="./components/cta.html" />
+    <load src="./components/footer.html" />
 
     <script type="module" src="js/main.js"></script>
   </body>
