update markup service

--- a/src/index.html
+++ b/src/index.html
@@ -296,13 +296,14 @@
                       <div class="accordion__content-box">
                         <h4 class="accordion__content-title">Markup Development</h4>
                         <p class="accordion__content-text p-2">
-                          We ensure your websites are built with clean, efficient, and standards-compliant HTML/CSS. We
-                          focus on creating lightweight, SEO-friendly code that renders perfectly across all browsers
+                          We ensure your websites are built with clean, efficient, and standards-compliant HTML/CSS/JS.
+                          We focus on creating lightweight, SEO-friendly code that renders perfectly across all browsers
                           and devices.
                         </p>
                         <ul class="tag__list">
                           <li class="tag__item p-2">Responsive</li>
                           <li class="tag__item p-2">HTML/CSS</li>
+                          <li class="tag__item p-2">JS</li>
                           <li class="tag__item p-2">Pixel-Perfect</li>
                           <li class="tag__item p-2">Cross-Browser Compatibility</li>
                         </ul>
